objects/nCBC__Finding__c.object
<CustomObject>
    <fields>
        <fullName>nCBC__Area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__Close_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nCBC__Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>BAG</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>CRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCBC__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nCBC__Disposition__c</fullName>
        <label>Finding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCBC__Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nCBC__Finding_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Finding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nCBC__Finding_Number__c</fullName>
        <displayFormat>{MM}-{YY}-{000}</displayFormat>
        <externalId>true</externalId>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>nCBC__LobLegacyKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>LobLegacyKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nCBC__Management_s_Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Management&apos;s Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nCBC__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Recommendation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCBC__Reference_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reference Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__Source__c</fullName>
        <label>Finding Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FED</fullName>
                </value>
                <value>
                    <fullName>FDIC</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Elliott Davis</fullName>
                </value>
                <value>
                    <fullName>Experis Finance</fullName>
                </value>
                <value>
                    <fullName>Live Oak</fullName>
                </value>
                <value>
                    <fullName>ATTUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCBC__Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Exam Findings</label>
    <listViews>
        <fullName>nCBC__All</fullName>
        <columns>NAME</columns>
        <columns>nCBC__Reference_Number__c</columns>
        <columns>nCBC__Finding_Date__c</columns>
        <columns>nCBC__Area__c</columns>
        <columns>nCBC__Description__c</columns>
        <columns>nCBC__Priority__c</columns>
        <columns>nCBC__Management_s_Response__c</columns>
        <columns>nCBC__Status__c</columns>
        <columns>nCBC__Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>nCBC__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{MM}-{YY}-{0000}</displayFormat>
        <label>Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>